--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
+  "name": "meal-record",
+  "version": "1.0.0",
+  "description": "<!-- title: 'AWS Simple HTTP Endpoint example in NodeJS' description: 'This template demonstrates how to make a simple HTTP API with Node.js running on AWS Lambda and API Gateway using the Serverless Framework.' layout: Doc framework: v4 platform: AWS language: nodeJS authorLink: 'https://github.com/serverless' authorName: 'Serverless, Inc.' authorAvatar: 'https://avatars1.githubusercontent.com/u/13742415?s=200&v=4' -->",
+  "main": "before.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "openai": "^4.72.0"
-  },
-  "devDependencies": {
-    "serverless-dotenv-plugin": "^6.0.0",
+    "openai": "^3.3.0",
+    "serverless": "^4.4.11",
     "serverless-offline": "^14.3.4"
   }
 }
