--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
   "name": "meal-record",
   "version": "1.0.0",
-  "description": "<!-- title: 'AWS Simple HTTP Endpoint example in NodeJS' description: 'This template demonstrates how to make a simple HTTP API with Node.js running on AWS Lambda and API Gateway using the Serverless Framework.' layout: Doc framework: v4 platform: AWS language: nodeJS authorLink: 'https://github.com/serverless' authorName: 'Serverless, Inc.' authorAvatar: 'https://avatars1.githubusercontent.com/u/13742415?s=200&v=4' -->",
-  "main": "before.js",
+  "description": "Meal nutrition calculator using OpenAI API",
+  "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "start": "serverless offline start",
+    "deploy": "serverless deploy"
   },
-  "keywords": [],
+  "keywords": [
+    "serverless",
+    "aws",
+    "lambda",
+    "openai",
+    "nutrition"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "openai": "^3.3.0",
+    "openai": "^3.3.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
     "serverless": "^4.4.11",
     "serverless-offline": "^14.3.4"
   }
