--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.8",
     "dotenv": "^16.4.5",
-    "openai": "^3.3.0"
+    "openai": "^3.3.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
